--- a/css/media.css
+++ b/css/media.css
@@ -41,4 +41,7 @@
     .social__link svg {
         width: calc(var(--index) * 3);
     }
+    .top__inner{
+        height: calc(100vh + 1px);
+    }
 }
