--- a/css/media.css
+++ b/css/media.css
@@ -42,6 +42,6 @@
         width: calc(var(--index) * 3);
     }
     .top__inner{
-        height: calc(100vh + 1px);
+        height: calc(100svh + 1px);
     }
 }
